@@ -1,53 +1,25 @@
 
 package net.mcreator.woncore.item;
 
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.client.IItemRenderProperties;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.api.distmarker.Dist;
-
-import net.minecraft.world.level.Level;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ArmorMaterial;
-import net.minecraft.world.item.ArmorItem;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.entity.Entity;
 import net.minecraft.sounds.SoundEvent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.client.model.geom.ModelPart;
-import net.minecraft.client.model.HumanoidModel;
-import net.minecraft.client.Minecraft;
 
-import net.mcreator.woncore.procedures.MastodonteBodyTickEventProcedure;
-import net.mcreator.woncore.init.WoncoreModTabs;
-import net.mcreator.woncore.client.model.ModelmastoH_model;
-import net.mcreator.woncore.client.model.ModelmastoC_model;
-import net.mcreator.woncore.client.model.ModelMastoL_model;
-import net.mcreator.woncore.client.model.ModelMastoB_model;
+public abstract class FuturisteArmorItem extends ArmorItem {
 
-import java.util.Map;
-import java.util.Collections;
-
-public abstract class MastodonteItem extends ArmorItem {
-	public MastodonteItem(EquipmentSlot slot, Item.Properties properties) {
+	public FuturisteArmorItem(EquipmentSlot slot, Item.Properties properties) {
 		super(new ArmorMaterial() {
 			@Override
 			public int getDurabilityForSlot(EquipmentSlot slot) {
-				return new int[]{13, 15, 16, 11}[slot.getIndex()] * 50;
+				return new int[]{13, 15, 16, 11}[slot.getIndex()] * 45;
 			}
 
 			@Override
 			public int getDefenseForSlot(EquipmentSlot slot) {
-				return new int[]{6, 8, 10, 4}[slot.getIndex()];
+				return new int[]{4, 6, 8, 4}[slot.getIndex()];
 			}
 
 			@Override
 			public int getEnchantmentValue() {
-				return 0;
+				return 9;
 			}
 
 			@Override
@@ -62,22 +34,23 @@ public abstract class MastodonteItem extends ArmorItem {
 
 			@Override
 			public String getName() {
-				return "mastodonte";
+				return "futuriste_armor";
 			}
 
 			@Override
 			public float getToughness() {
-				return 3f;
+				return 2f;
 			}
 
 			@Override
 			public float getKnockbackResistance() {
-				return 1f;
+				return 0.2f;
 			}
 		}, slot, properties);
 	}
 
-	public static class Helmet extends MastodonteItem {
+	public static class Helmet extends FuturisteArmorItem {
+
 		public Helmet() {
 			super(EquipmentSlot.HEAD, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
 		}
@@ -87,7 +60,7 @@ public abstract class MastodonteItem extends ArmorItem {
 				@Override
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new ModelmastoH_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelmastoH_model.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
+							Map.of("head", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).Head, "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_arm",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
@@ -101,11 +74,13 @@ public abstract class MastodonteItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/armortexture.png";
+			return "woncore:textures/entities/futuriste_armor_texture.png";
 		}
+
 	}
 
-	public static class Chestplate extends MastodonteItem {
+	public static class Chestplate extends FuturisteArmorItem {
+
 		public Chestplate() {
 			super(EquipmentSlot.CHEST, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
 		}
@@ -115,9 +90,9 @@ public abstract class MastodonteItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelmastoC_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelmastoC_model.LAYER_LOCATION)).Body, "left_arm",
-							new ModelmastoC_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelmastoC_model.LAYER_LOCATION)).LeftArm, "right_arm",
-							new ModelmastoC_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelmastoC_model.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).Body,
+							"left_arm", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).RighArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -129,16 +104,13 @@ public abstract class MastodonteItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/armortexture.png";
+			return "woncore:textures/entities/futuriste_armor_texture.png";
 		}
 
-		@Override
-		public void onArmorTick(ItemStack itemstack, Level world, Player entity) {
-			MastodonteBodyTickEventProcedure.execute(entity);
-		}
 	}
 
-	public static class Leggings extends MastodonteItem {
+	public static class Leggings extends FuturisteArmorItem {
+
 		public Leggings() {
 			super(EquipmentSlot.LEGS, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
 		}
@@ -149,8 +121,8 @@ public abstract class MastodonteItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new ModelMastoL_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMastoL_model.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new ModelMastoL_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMastoL_model.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -163,11 +135,13 @@ public abstract class MastodonteItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/armortexture.png";
+			return "woncore:textures/entities/futuriste_armor_texture.png";
 		}
+
 	}
 
-	public static class Boots extends MastodonteItem {
+	public static class Boots extends FuturisteArmorItem {
+
 		public Boots() {
 			super(EquipmentSlot.FEET, new Item.Properties().tab(WoncoreModTabs.TAB_COMBAT).fireResistant());
 		}
@@ -178,8 +152,8 @@ public abstract class MastodonteItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new ModelMastoB_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMastoB_model.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new ModelMastoB_model(Minecraft.getInstance().getEntityModels().bakeLayer(ModelMastoB_model.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).Leftboots, "right_leg",
+									new Modelfuturiste_armor(Minecraft.getInstance().getEntityModels().bakeLayer(Modelfuturiste_armor.LAYER_LOCATION)).RightBoots, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -192,7 +166,9 @@ public abstract class MastodonteItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "woncore:textures/entities/armortexture.png";
+			return "woncore:textures/entities/futuriste_armor_texture.png";
 		}
+
 	}
+
 }
